--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>持仓量分析系统</title>
+    <title>持仓量分析</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@0.27.2/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -586,20 +586,20 @@
         
         /* 修复标签颜色问题 */
         .status-up {
-            color: var(--light-green);
-            border-color: var(--light-green);
+            color: var(--light-green) !important;
+            border-color: var(--light-green) !important;
         }
         .dark-theme .status-up {
-            color: var(--dark-green);
-            border-color: var(--dark-green);
+            color: var(--dark-green) !important;
+            border-color: var(--dark-green) !important;
         }
         .status-down {
-            color: var(--light-red);
-            border-color: var(--light-red);
+            color: var(--light-red) !important;
+            border-color: var(--light-red) !important;
         }
         .dark-theme .status-down {
-            color: var(--dark-red);
-            border-color: var(--dark-red);
+            color: var(--dark-red) !important;
+            border-color: var(--dark-red) !important;
         }
 
         /* 持仓量图表容器 */
