--- a/static/index.html
+++ b/static/index.html
@@ -1123,7 +1123,7 @@
         </div>
         
         <footer>
-            <p>币安风格合约分析系统 &copy; 2023 | 基于多周期持仓量分析</p>
+            <p>币安合约分析系统 &copy; 2025 | 基于多周期持仓量分析</p>
             <p>数据更新时间: {{ lastUpdated || '加载中...' }}</p>
         </footer>
     </div>
